# numasec

./: .containerignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  FORK_PRD.md  INSTALL.md  LICENSE  MANIFEST.md  NOTICE  README.md  SECURITY.md  install-v2.sh  install.sh  package.json  pyproject.toml  pytest.ini  requirements.txt  test_matrix_cli.py
.agent/rules/: persona.md
.github/: README.md  RELEASE_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  upstream-sync.yml
agent/: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  SECURITY.md  flake.nix  install  package.json  sst.config.ts  turbo.json
agent/.github/: CODEOWNERS  TEAM_MEMBERS  VOUCHED.td
agent/.numasec/: opencode.jsonc
agent/github/: README.md  action.yml  index.ts  package.json
agent/infra/: console.ts  enterprise.ts  stage.ts
agent/nix/: desktop.nix  node_modules.nix  numasec.nix
agent/patches/: solid-js@1.9.10.patch
agent/script/: beta.ts  changelog.ts  duplicate-pr.ts  generate.ts  publish.ts  stats.ts  sync-zed.ts  version.ts
agent/specs/: project.md
docs/: ARCHITECTURE.md  CYBERPUNK_CLI.md  CYBERPUNK_CLI_RELEASE_NOTES.md  MANIFESTO.md  POST_FORK_PRD.md  PROMPTS.md  README.md  recommended-mcps.md
numasec/: __init__.py  __main__.py  launcher.py  worker.py
numasec/cli/: ci_mode.py  templates.py
numasec/core/: coverage.py  planner.py
numasec/knowledge/: __init__.py  loader.py  pack.py  retriever.py  signer.py
numasec/mcp/: __init__.py  _security.py  _singletons.py  intel_tools.py  mcp_session_store.py  prompts.py  resources.py  server.py  state_tools.py  tool_bridge.py
numasec/models/: __init__.py  enums.py  finding.py  plan.py  sarif.py  target.py
numasec/reporting/: __init__.py  html.py  markdown.py  sarif.py
numasec/scanners/: __init__.py  _base.py  _encoder.py  _envelope.py  _plugin.py  auth_tester.py  browser_crawler.py  command_injection_tester.py  cors_tester.py  crawler.py  crlf_tester.py  csrf_tester.py  cve_enricher.py  dir_fuzzer.py  graphql_tester.py  host_header_tester.py  idor_tester.py  js_analyzer.py  lfi_tester.py  naabu.py  nmap.py  nosql_tester.py  open_redirect_tester.py  openapi_parser.py  poc_validator.py  python_connect.py  race_tester.py  service_prober.py  shodan.py  (+9 more)
scripts/: benchmark_optimizations.py  benchmark_parallel.py  check_tool_dependencies.sh  container-run.sh  demo_batch_suggester.py  documentation_audit.py  error_handling_audit.py  inspect_knowledge.py  install_tool_stubs.sh  quick_validate.sh  security_audit.py  test_authorization.py  test_cli_commands.py  test_cli_interface.py  test_cognitive_components.py  test_cwe_cvss.py  test_cyberpunk_ui.py  test_engagement_tools.py  test_factstore.py  test_finding_tools.py  test_llm_router.py  test_mcp_tools.py  test_memory_tools.py  test_metrics_display.py  test_parallel_execution.py  test_rag_system.py  test_recon_tools_part1.py  test_remaining_tools.py  test_response_event.py  test_scope_authorization.py  test_tool_grounding.py  test_ucb1_explorer.py  test_web_request.py  validate_cyberpunk_cli.py  verify_fixes.sh  verify_introspection.py
security_mcp/: __init__.py  __main__.py
tests/: conftest.py  test_auth_jwt_checks.py  test_auth_spray.py  test_auth_tester.py  test_benchmark_upgrades.py  test_build_chains.py  test_burp_bridge.py  test_composite_crawl_openapi.py  test_composite_recon_services.py  test_config_and_templates.py  test_crawler.py  test_cve_enricher.py  test_dir_fuzzer.py  test_false_positives.py  test_graphql_extended.py  test_js_analyzer.py  test_knowledge.py  test_launcher.py  test_mcp_bridge.py  test_mcp_integration.py  test_mcp_intel.py  test_mcp_session_store.py  test_mcp_singletons.py  test_mcp_state.py  test_mcp_tools.py  test_models.py  test_new_scanners.py  test_oob_tool.py  test_openapi_parser.py  test_plan_living.py  test_planner.py  test_poc_validator.py  test_sarif.py  test_scanner_batch.py  test_scanner_enhancements.py  test_scanners.py  test_security.py  test_security_shell.py  test_service_prober.py  test_smoke_pipeline.py  (+8 more)
wordlists/: italian_ctf.txt  smd_challenge.txt  top_passwords.txt
(+371 files in other folders)
