# NumaSec - The MCP-Native Pentesting Copilot
# Modern Python packaging (PEP 621)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numasec"
version = "2.3.0"
description = "AI-powered penetration testing copilot with MCP protocol support"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "FrancescoStabile" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
keywords = ["pentesting", "security", "ai", "mcp", "cli", "compliance"]

dependencies = [
    # CLI Framework
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    
    # MCP Protocol
    "mcp>=1.0.0",
    
    # AI Providers
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    
    # Vector Store & Embeddings (CPU-only, no CUDA)
    "lancedb>=0.6.0",
    "pyarrow>=14.0.0",
    "sentence-transformers>=2.7.0",
    # NOTE: torch is NOT listed here to avoid downloading 3.7GB CUDA deps.
    # Install CPU-only torch first: pip install torch --index-url https://download.pytorch.org/whl/cpu
    "rank-bm25>=0.2.2",
    
    # ML for Meta-Learning
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.29",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    
    # Data Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # Utilities
    "pyyaml>=6.0.0",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.1.0",
    
    # Report Generation
    "python-docx>=1.1.0",
    
    # XML Parsing (for nmap)
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
numasec = "numasec:main"
numasec-mcp = "numasec.mcp.server:main"

[project.urls]
Homepage = "https://github.com/FrancescoStabile/numasec"
Documentation = "https://numasec.readthedocs.io"
Repository = "https://github.com/FrancescoStabile/numasec"
Issues = "https://github.com/FrancescoStabile/numasec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/numasec"]
# Include markdown files in the wheel
artifacts = ["src/numasec/knowledge_data/**/*.md"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/wordlists",
    "/alembic",
    "/alembic.ini",
]

# ══════════════════════════════════════════════════════════════════════════════
# Tool Configuration
# ══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default arguments
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["numasec"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "sentence_transformers.*",
    "defusedxml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.coverage.run]
source = ["src/numasec"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
